# LMAO

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.iot-ingest  MODULE.bazel  README.md  WORKSPACE  diagnose_stack.py  mypy.ini  ruff.toml
.archon/: config.yaml
cardputer_client/: BUILD  boot.py  config.py  flash.py  lora_boards.py  main.py
docs/: alternative-firmware.md  archon-webhook-relay.md  cluster-setup.md  k3s-agent-config.yaml  k3s-config.yaml
human_client/: BUILD  __init__.py  client.py  config.py
k8s/: iot-ingest.yaml  lmao-service.yaml  nats-server.yaml
k8s-app/: BUILD  iot_ingest.py  iot_ingest_consumer.py
lma_core/: BUILD  __init__.py  config_utils.py  device_detect.py  grpc_types.py  message_utils.py  queue.py  rnode_flasher.py  rns_di.py  rns_init.py  storage.py
lmao_server/: BUILD  config.py  requirements.txt  requirements_lock.txt  server.py
proto/: BUILD  __init__.py  lma.proto  lma_grpc.proto  lma_grpc_pb2.py  lma_grpc_pb2_grpc.py  lma_messages.proto  lma_messages_pb2.py  lma_pb2.py  lma_pb2_grpc.py
rnode_firmware/: README.md
tests/: BUILD  conftest.py  test_client_repl.py  test_client_startup.py  test_config.py  test_device_detect.py  test_flash.py  test_human_client.py  test_human_client_config.py  test_install_all.py  test_iot_ingest.py  test_lma_core.py  test_lma_encoder.py  test_main.py  test_message_utils.py  test_paths.py  test_queue.py  test_sensors.py  test_server_grpc.py  test_server_handler.py  test_server_startup.py  test_storage.py  test_urns_identity.py  (+3 more)
(+51 files in other folders)
